--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-simple-uploader": "^0.7.4",
     "vuetify": "^1.5.21"
   },
   "devDependencies": {
